syntax = "proto3";

package flyteidl2.task;

import "buf/validate/validate.proto";
import "flyteidl2/common/identifier.proto";
import "flyteidl2/common/identity.proto";
import "flyteidl2/core/interface.proto";
import "flyteidl2/core/tasks.proto";
import "flyteidl2/task/common.proto";
import "flyteidl2/task/environment.proto";
import "flyteidl2/task/run.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/flyteorg/flyte/v2/gen/go/flyteidl2/task";

// Name of a task. It may have multiple versions deployed.
message TaskName {
  // Org this task belongs to.
  string org = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Project this task belongs to.
  string project = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Domain this task belongs to.
  string domain = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Unique name of the task. Should not be interpreted/parsed. Use `short_name` and `environment_name` for user facing names.
  string name = 4 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
}

// TaskIdentifier is the unique identifier for a task.
message TaskIdentifier {
  // Org this task belongs to.
  string org = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Project this task belongs to.
  string project = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Domain this task belongs to.
  string domain = 3 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];

  // Unique name of the task. Should not be interpreted/parsed. Use `short_name` and `environment_name` for user facing names.
  string name = 4 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];

  // Version of the task.
  string version = 5 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 63
  ];
}

message TaskTriggersSummary {
  message TriggerStats {
    uint32 total = 1;
    uint32 active = 2;
  }

  oneof summary {
    TriggerAutomationSpec automation_spec = 1;
    TriggerStats stats = 2;
  }
}

// TaskMetadata is static, lightweight metadata about a task.
message TaskMetadata {
  // Identity that deployed the task.
  common.EnrichedIdentity deployed_by = 1 [(buf.validate.field).required = true];

  // The short name for this task
  string short_name = 2;

  // The time the task was deployed
  google.protobuf.Timestamp deployed_at = 3 [(buf.validate.field).required = true];

  // The environment name for this task, if present.
  string environment_name = 4;

  // Brief overview of attached triggers if any.
  TaskTriggersSummary triggers_summary = 5;
}

// Lightweight representation of a task.
message Task {
  // Id for this task.
  TaskIdentifier task_id = 1 [(buf.validate.field).required = true];

  // Metadata for this task.
  TaskMetadata metadata = 2 [(buf.validate.field).required = true];
}

// Specification for a task.
message TaskSpec {
  // The template for this task.
  flyteidl2.core.TaskTemplate task_template = 1 [(buf.validate.field).required = true];

  // Ordered default inputs.
  // These can be overridden when an run is created.
  // Client should not send required=true flag in underlying flyteidl2.core.Parameter.
  repeated NamedParameter default_inputs = 2;

  // User facing display name for this task. Not required to be unique.
  // This is passed in via the SDK when the task is created and is either a user defined override or the name of the task.
  string short_name = 3 [(buf.validate.field).string.max_len = 63];

  // Optional environment for this task. Note, some tasks may not be run in the context of an environment.
  Environment environment = 4;
}

// Specification for a trace action.
message TraceSpec {
  // A strongly typed interface for the trace.
  flyteidl2.core.TypedInterface interface = 1;
}

// Detailed information about a task.
message TaskDetails {
  // Id for this task.
  TaskIdentifier task_id = 1 [(buf.validate.field).required = true];

  // Metadata for this task.
  TaskMetadata metadata = 2 [(buf.validate.field).required = true];

  // Specification for this task.
  TaskSpec spec = 3 [(buf.validate.field).required = true];
}

// Contains details about a single trigger attached to a task. Should only be used in DeployTask endpoint.
message TaskTrigger {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];

  TaskTriggerSpec spec = 2 [(buf.validate.field).required = true];

  // Optional automation spec.
  flyteidl2.task.TriggerAutomationSpec automation_spec = 3;
}

// TaskTriggerSpec this is a copy of TriggerSpec without mandatory 'task_version' field.
// This is supposed to be used only in DeployTask endpoint where 'task_version' is already provided in task_id.
message TaskTriggerSpec {
  // Whether trigger is active
  bool active = 1;

  // Inputs for triggered task.
  Inputs inputs = 2;

  // The run spec for triggered task.
  flyteidl2.task.RunSpec run_spec = 3;
}
